--- a/package.json
+++ b/package.json
@@ -24,16 +24,10 @@
   },
   "homepage": "https://github.com/batzner/github-pages-boilerplate#readme",
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-babel": "latest",
-    "gulp-clean": "latest",
-    "gulp-clean-css": "^3.7.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^4.0.0",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-merge": "^0.1.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "latest"
+    "gulp-clean": "latest"
   }
 }
