--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "latest",
     "gulp-clean": "latest"
+    "gulp": "~4.0.0",
+    "gulp-babel": "~8.0.0",
   }
 }
