--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/batzner/github-pages-boilerplate#readme",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "latest",
-    "gulp-clean": "latest"
+    "@babel/core": "~7.0.0",
+    "@babel/preset-env": "~7.0.0",
+    "gulp": "~4.0.0",
+    "gulp-babel": "~8.0.0",
+    "del": "~3.0.0"
   }
 }
